--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <h1 class="btn btn-warning heading" style="font-size: 23px;">
         Font Manipulator
         <br>
-        <label style="font-size: 15px;">Note-Get your left and right wrists closer to each other to reduce the font size and to increase the font
+        <label style="font-size: 15px;">Note-Get your left and right wrists closer to each other to reduce the font size
+            and to increase the font
             size keep your wrists farther from each other</label>
         <span id="span"></span>
     </h1>
